--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "PaulWade-SrWebDev-Project-1",
   "version": "0.0.1",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "eslint": "^3.4.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
     "gulp-pug": "^3.0.4",
     "gulp-stylus": "^2.5.0",
+    "mocha": "^3.0.2",
     "pug": "^2.0.0-beta6"
   }
 }
