--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "PaulWade-SrWebDev-Project-1",
   "version": "0.0.1",
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "eslint": "^3.4.0",
@@ -10,7 +11,9 @@
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
     "gulp-pug": "^3.0.4",
+    "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.5.0",
+    "gulp-uglify": "^2.0.0",
     "mocha": "^3.0.2",
     "pug": "^2.0.0-beta6"
   }
