--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "eslint": "^3.4.0",
+    "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^3.0.1",
@@ -16,6 +17,5 @@
     "gulp-uglify": "^2.0.0",
     "mocha": "^3.0.2",
     "pug": "^2.0.0-beta6"
-    "font-awesome": "^4.6.3"
   }
 }
