--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "PaulWade-SrWebDev-Project-1",
   "version": "0.0.1",
+  "scripts": {
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings"
+  },
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
@@ -16,6 +24,27 @@
     "gulp-stylus": "^2.5.0",
     "gulp-uglify": "^2.0.0",
     "mocha": "^3.0.2",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "concurrently": "^2.2.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2"
+  },
+  "dependencies": {
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@angular/upgrade": "2.0.0",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.23",
+    "angular2-in-memory-web-api": "0.0.20"
   }
 }
